# HelloVulkanApplication

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/licenses/: chunky_knight.txt
assets/models/: chunky_knight.mtl
assets/shaders/: default.frag  default.frag.spv  default.vert  default.vert.spv
include/: HelloVulkanApplication.hpp  Window.hpp
scripts/: build-shaders.py
src/: HelloVulkanApplication.cpp  Window.cpp  main.cpp
